# eth-validator-watcher

./: .gitignore  Cargo.toml  LICENSE  README.md
eth-parser/: Cargo.toml
eth-parser/src/: args.rs  consensus_layer.rs  error.rs  execution_layer.rs  main.rs  traits.rs
eth-parser/src/beacon_client/: mod.rs
eth-parser/src/client_consensus/: mod.rs
eth-parser/src/client_execution/: mod.rs
eth-parser/src/sync/: consensus_layer.rs  execution_layer.rs  mod.rs  syncer.rs  validators.rs
eth-parser/src/web3_client/: mod.rs
kiln-postgres/: Cargo.toml
kiln-postgres/migrations/2022-03-17-165450_create_specs/: down.sql  up.sql
kiln-postgres/migrations/2022-03-17-165525_create_slots/: up.sql
kiln-postgres/migrations/2022-03-17-165525_create_table_slots/: up.sql
kiln-postgres/migrations/2022-03-23-103815_add_block_to_slots/: down.sql  up.sql
kiln-postgres/migrations/2022-03-24-102140_create_table_execution_blocks/: down.sql  up.sql
kiln-postgres/migrations/2022-03-29-141155_add_table_transactions/: up.sql
kiln-postgres/migrations/2022-03-30-093023_create_table_validators/: down.sql  up.sql
kiln-postgres/src/: lib.rs  schema.rs  types.rs
kiln-postgres/src/models/: mod.rs  types.rs
kiln-postgres/src/models/execution_blocks/: insertable.rs  queryable.rs
kiln-postgres/src/models/slots/: insertable.rs  mod.rs  queryable.rs
kiln-postgres/src/models/specs/: insertable.rs
kiln-postgres/src/models/transactions/: insertable.rs  mod.rs  queryable.rs
kiln-postgres/src/models/validators/: insertable.rs  mod.rs  queryable.rs
migrations/2022-03-15-152810_create_validators/: up.sql
migrations/2022-03-16-095026_create_slots/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  schema.rs
src/beacon_client/: mod.rs
src/models/: insertables.rs  mod.rs  queryables.rs
src/postgres/: mod.rs  slots.rs
src/postgres/models/: insertables.rs  mod.rs  queryables.rs
src/tests/: mod.rs
web-api/: Cargo.toml
web-api/src/: errors.rs  main.rs  packed_nft_types.rs
web-api/src/params/: hash160.rs  hash256.rs  mod.rs
web-api/src/routes/: mod.rs  packed_nft.rs
