[workspace]
members = ["eth-parser", "kiln-postgres"]

[patch]
[patch.crates-io]
eth2_serde_utils = { git = "http://github.com/sigp/lighthouse" }
eth2_ssz         = { git = "http://github.com/sigp/lighthouse" }
eth2_ssz_types   = { git = "http://github.com/sigp/lighthouse" }
fixed-hash       = { git = "https://github.com/paritytech/parity-common", rev = "df638ab0885293d21d656dc300d39236b69ce57d" }
tree_hash        = { git = "http://github.com/sigp/lighthouse" }
