[package]
edition = "2021"
name    = "eth-parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Consensus layer
eth2          = { git = "http://github.com/sigp/lighthouse", branch = "unstable" }
sensitive_url = { git = "http://github.com/sigp/lighthouse", branch = "unstable" }

# Execution layer
web3 = { version = "0.18.0", default-features = false, features = ["http-tls"] }

# ORM
diesel = { version = "1.4.8", default-features = false }

# async
tokio = { version = "1.17.0", features = ["full"] }

# utils
dotenv     = "0.15.0"
env_logger = "0.9.0"
itertools  = "0.10.3"
log        = "0.4.14"

# local
kiln-postgres = { path = "../kiln-postgres" }

[dev-dependencies]
