[package]
authors = ["Timothée Delabrouille <timothee@magicdust.gg>"]
edition = "2021"
name    = "kiln-postgres"
version = "0.1.0"

[dependencies]
diesel          = { version = "1.4.8", features = ["postgres"] }
primitive-types = { version = "0.10.1", features = ["serde"] }
serde           = { version = "1.0.136", features = ["derive"] }
