[package]
authors = ["Timothée Delabrouille <timothee@magicdust.gg>"]
edition = "2021"
name    = "web-api"
version = "0.1.0"

# server
[dependencies.rocket]
features = ["json"]
version  = "0.5.0-rc.1"

[dependencies.rocket_sync_db_pools]
features = ["diesel_postgres_pool"]
version  = "0.1.0-rc.1"

# utils
[dependencies.dotenv]
version = "0.15.0"

[dependencies.env_logger]
version = "0.9.0"

[dependencies.log]
version = "0.4.14"

# local
[dependencies.kiln-postgres]
path = "../kiln-postgres"

[dependencies.primitive-types]
version = "0.10.1"

[dependencies.hex]
version = "0.4.3"
