[package]
authors = ["Timothée Delabrouille <timothee@magicdust.gg>"]
edition = "2021"
name    = "web-api"
version = "0.1.0"

[dependencies]
# server
rocket = { default-features = false, features = [
  "json",
  "serde_json",
], version = "0.5.0-rc.1" }
rocket_sync_db_pools = { default-features = false, features = [
  "diesel_postgres_pool",
], version = "0.1.0-rc.1" }

# utils
dotenv     = "0.15.0"
env_logger = "0.9.0"
log        = "0.4.14"
rayon = "1.5.3"

# local
kiln-postgres = { path = "../kiln-postgres" }

hex             = "0.4.3"
primitive-types = "0.10.1"
serde           = { version = "1.0.136", features = ["derive"] }

#macro
paste = "1.0.7"
